syntax = "proto3";
package user;

option go_package = "./rpc_impl";
option optimize_for = LITE_RUNTIME;

import "common.proto";

service IUser {
  // functions
  rpc Login(User.LoginReq) returns (User.LoginRes);
  rpc List(User.ListReq) returns (User.ListRes);
  rpc Create(User.CreateReq) returns (User.CreateRes);
  rpc Lock(User.LockReq) returns (User.LockRes);
  rpc Unlock(User.UnlockReq) returns (User.UnlockRes);
  rpc ModifyInfo(User.ModifyInfoReq) returns (User.ModifyInfoRes);
  rpc ModifyPermission(User.ModifyPermissionReq) returns (User.ModifyPermissionRes);

  // for other services
  rpc Authenticate(User.AuthenticateReq) returns (User.AuthenticateRes);
}

message User {
  message Data {
    string user_id = 1;
    string user_name = 2;
    string nickname = 3;
    bool is_locked = 4;
    uint32 permission = 5;
  }

  message LoginReq {
    string user_name = 1;
    string password = 2;
  }

  message LoginRes {
    string user_id = 1;
    string nickname = 2;
    uint32 permission = 3;

    common.Error err = 15;
  }

  message ListReq {
    string operator_id = 1;

    common.Pagination page = 15;
  }

  message ListRes {
    uint32 total = 1;
    repeated Data users = 2;

    common.Error err = 15;
  }

  message CreateReq {
    string operator_id = 1;
    string user_name = 2;
    string password = 3;
    uint32 permission = 4;
    string operator_password = 5;
  }

  message CreateRes {
    common.Error err = 15;
  }

  message LockReq {
    string operator_id = 1;
    string user_id = 2;
    string password = 3;
  }

  message LockRes {
    common.Error err = 15;
  }

  message UnlockReq {
    string operator_id = 1;
    string user_id = 2;
    string password = 3;
  }

  message UnlockRes {
    common.Error err = 15;
  }

  message ModifyInfoReq {
    string operator_id = 1;
    string user_id = 2;
    string curr_pwd = 3;
    string nickname = 4;
    string password = 5;
  }

  message ModifyInfoRes {
    common.Error err = 15;
  }

  message ModifyPermissionReq {
    string operator_id = 1;
    string user_id = 2;
    uint32 permission = 3;
    string password = 4;
  }

  message ModifyPermissionRes {
    common.Error err = 15;
  }

  message AuthenticateReq {
    string user_id = 1;
    string password = 2;
  }

  message AuthenticateRes {
    common.Error err = 15;
  }
}
